# ros2-gazebo-template

navbot/: package.xml  setup.cfg  setup.py
navbot/description/: rover.gazebo  rover.xacro  test.urdf  todo.xacro
navbot/launch/: launch.py  test.py
